--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="email">User ID</string>
     <string name="password">Password</string>
     <color name="transparent">#00000000</color>
-    <string name="iplink">http://111.93.174.107/</string>
+    <string name="iplink">http://odishaforestlandsurvey.in</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
