Change in DGPS and JWT 4.3.2020

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <color name="transparent">#00000000</color>
     <string name="app_name">GFLO</string>
     <string name="booki">GFLO</string>
-    <string name="welcome_back">Geo-referencing of Forest Land,Odisha</string>
+    <string name="welcome_back">Geo-referencing of Forest Land in Odisha</string>
     <string name="forgot">Forgot Password?</string>
     <string name="login">Login</string>
     <string name="otp">Get OTP</string>
